adding all the basic models and cnn model

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ ipython_config.py
 /numpy_files_durations.npy
 /melspec_files_clean/
 /melspec_files/
+/mfccs_files_clean.zip
+/mfccs_files_durations.npy
